--- a/src/index.css
+++ b/src/index.css
@@ -13,9 +13,9 @@ code {
 }
 
 .card {
-  background-color: brown;
+  background-color: #ebebeb;
   padding: 1rem;
-  width: 1rem;
+  border-radius: 15px;
 }
 
 .pageTitle {
@@ -26,7 +26,7 @@ code {
 }
 
 .pageSubtitle {
-  font-family: "SF Pro Rounded";
+  font-family: -apple-system, Helvetica Neue;
   font-weight: bold;
   color: grey;
   font-size: 20px;
