--- a/src/components/css/index.css
+++ b/src/components/css/index.css
@@ -29,8 +29,9 @@ code {
   font-family: -apple-system, Helvetica Neue;
   font-weight: bold;
   color: grey;
-  font-size: 20px;
+  font-size: 22px;
   padding-bottom: 0.5rem;
+  padding-top: 1rem;
 }
 
 .pageSubSubtitle {
@@ -72,6 +73,10 @@ code {
 
 .contentInsets {
   padding: 1rem;
+}
+
+.leftContentInsets {
+  padding-left: 1rem;
 }
 
 .rightJustified {
