--- a/src/components/css/index.css
+++ b/src/components/css/index.css
@@ -26,14 +26,14 @@ code {
 
 
 .pageTitle {
-  font-family: -apple-system, Helvetica Neue;
+  font-family: -apple-system, Helvetica Neue, Arial;
   font-weight: bold;
   font-size: 40px;
   padding-bottom: 1rem;
 }
 
 .pageSubtitle {
-  font-family: -apple-system, Helvetica Neue;
+  font-family: -apple-system, Helvetica Neue, Arial;
   font-weight: bold;
   color: grey;
   font-size: 22px;
@@ -42,13 +42,13 @@ code {
 }
 
 .pageSubSubtitle {
-  font-family: -apple-system, Helvetica Neue;
+  font-family: -apple-system, Helvetica Neue, Arial;
   font-size: 17px;
   padding-bottom: 0.5rem;
 }
 
 .standardButton {
-  font-family: -apple-system, Helvetica Neue;
+  font-family: -apple-system, Helvetica Neue, Arial;
   font-size: 20px;
   background-color: lightgray;
   border-width: 0px;
@@ -65,14 +65,14 @@ code {
 }
 
 .navigationBarText {
-  font-family: Helvetica;
+  font-family: Helvetica, Arial;
   font-size: 20px;
   color: white;
   text-align: right;
 }
 
 .homeButton {
-  font-family: Helvetica;
+  font-family: Helvetica, Arial;
   font-weight: bold;
   font-size: 30px;
   color: white;
